# shiyanshianquan

./: .gitignore  A_B_C_三人分工认领表.docx  README.md  d435_yolov8n_rgb_detect.py  run_labguard_stack.sh
firmware/: 2025电子系统第2组作品简介.docx  B_DELIVERY_NOTES.md  ESP32_P4_实验室安全系统_采购清单.xlsx  HARDWARE_VERIFICATION.md  README.md  硬件组装说明.md  项目介绍.md
firmware/components/espdl_probe/: CMakeLists.txt  Kconfig  README.md  espdl_probe.c
firmware/components/espdl_probe/model/: model.espdl
firmware/components/event_log/: CMakeLists.txt  event_log.c
firmware/components/event_log/include/: event_log.h
firmware/components/labguard_common/: CMakeLists.txt  labguard_common.c
firmware/components/labguard_common/include/: labguard_common.h
firmware/components/labguard_net/: CMakeLists.txt  labguard_net.c
firmware/components/labguard_net/include/: labguard_net.h
firmware/esp_indoor/: CMakeLists.txt  HAZARD_MODEL_SETUP.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/esp_indoor/components/actuator_ctrl/: CMakeLists.txt  Kconfig  actuator_ctrl.c
firmware/esp_indoor/components/camera_capture/: CMakeLists.txt  idf_component.yml  indoor_camera_capture.c
firmware/esp_indoor/components/camera_capture/include/: indoor_camera_capture.h
firmware/esp_indoor/components/hazard_infer/: CMakeLists.txt  Kconfig  hazard_infer.c  hazard_infer.cpp  idf_component.yml
firmware/esp_indoor/components/risk_fusion/: CMakeLists.txt  risk_fusion.c
firmware/esp_indoor/components/sensor_reader/: CMakeLists.txt  Kconfig  sensor_reader.c
firmware/esp_indoor/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
firmware/esp_outdoor/: CMakeLists.txt  sdkconfig.defaults
firmware/esp_outdoor/components/audio_prompt/: CMakeLists.txt  Kconfig  audio_prompt.c
firmware/esp_outdoor/components/camera_capture/: CMakeLists.txt  outdoor_camera_capture.c
firmware/esp_outdoor/components/door_fsm/: CMakeLists.txt  door_fsm.c
firmware/esp_outdoor/components/led_status/: CMakeLists.txt  led_status.c
firmware/esp_outdoor/components/ppe_infer/: ppe_infer.c  (+1 more)
firmware/esp_outdoor/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
firmware/models/p4/: lab_fire_smoke.espdl  lab_fire_smoke.json
firmware/tools/: convert_fire_smoke_onnx_to_espdl.py  download_sh17_weights.py  ppe_detect_hexmon.py  prepare_roboflow_ppe_subset.py  quantize_fire_smoke_onnx.py  requirements-ppe.txt
firmware/vision/视觉推理_POC_ESPDL/: README.md
lab_fire_smoke_model_handoff_v1-20260521T114351Z-3-001/lab_fire_smoke_model_handoff_v1/: README_model_handoff.md
lab_fire_smoke_model_handoff_v1-20260521T114351Z-3-001/lab_fire_smoke_model_handoff_v1/model/: data.yaml
mobile/LabGuard/: App.tsx  README.md  app.json  docs-mobile-usage.md  docs-mqtt-topics.md  package-lock.json  package.json  run_mobile_app.sh
mobile/LabGuard/src/: types.ts
runs/detect/big_can_yolo26n/: args.yaml  results.csv
runs/detect/big_can_yolov8n/: args.yaml  results.csv
runs/detect/small_can_yolov8n/: args.yaml  results.csv
web/dashboard/: FRONTEND_FEATURES.md  README.md  index.html  mosquitto-labguard.conf  package-lock.json  package.json  run_dashboard_stack.sh  serial-bridge.mjs
web/dashboard/src/: main.js  styles.css
web/mobile/: README.md  index.html  package-lock.json  package.json
web/mobile/public/: manifest.webmanifest  sw.js
web/mobile/src/: main.js  styles.css
(+41 files in other folders)
